fix feat/fifth-section mobile layout

--- a/blocks/landing-fifth/__apps/_landing-fifth__apps.scss
+++ b/blocks/landing-fifth/__apps/_landing-fifth__apps.scss
@@ -1,4 +1,6 @@
-.landing-fifth__apps {
-  grid-column: 1;
-  grid-row: 4/5;
+@media screen and (min-width: 768px) {
+  .landing-fifth__apps {
+    grid-column: 1;
+    grid-row: 4/5;
+  }
 }
