--- a/blocks/landing-fifth/__section-image/_landing-fifth__section-image.scss
+++ b/blocks/landing-fifth/__section-image/_landing-fifth__section-image.scss
@@ -1,4 +1,6 @@
-.landing-fifth__section-image {
-  grid-column: 2;
-  grid-row: 1/5;
+@media screen and (min-width: 768px) {
+  .landing-fifth__section-image {
+    grid-column: 2;
+    grid-row: 1/5;
+  }
 }
